--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+// searchフォーム
 .search {
   height: 60px;
   width: 100%;
@@ -115,7 +116,7 @@
             }
           }
           &__info {
-            margin: 0 10px 0 10px;
+            margin: 0 20px 0 20px;
             width: 100%;
             &__ttl {
               border-bottom: 1px solid lightgray;
