--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -1,30 +1,52 @@
 .form {
+  font-family: arial unicode ms;
   &__container {
     height: auto;
-    width: 350px;
-    margin: 100px auto 100px auto;
+    width: 700px;
+    background-color: rgba(0,0,0,0.4);
+    border: 0 solid rgba(0,0,0,0.4);
+    border-radius: 10px;
+    box-shadow: 0 1px 4px;
+    background: #fff;
+    margin: 100px auto;
+    padding: 40px 100px;
     &__title {
       font-size: 30px;
       font-weight: bold;
-      font: bold;
       text-align: center;
     }
-    .new-content {
+    .input {
       width: 100%;
-      margin-top: 15px;
+      margin: 30px auto;
+      line-height: 45px;
+      display: flex ;
+      justify-content: space-between;
       &__title {
       }
       &__form {
-        height: 40px;
-        width: 100%;
-        margin-top: 5px;
+        width: 300px;
         border-radius: 5px;
         border: 1px solid #ccc;
       }
+    }
+    .submit {
+      text-align: center;
+      margin: 30px auto;
       .submit-btn {
         height: 40px;
-        width: 100%;
-        margin-top: 40px;
+        width: 300px;
+        color: rgba(12, 18, 28, 0.6);
+        border-radius: 25px;
+        cursor: pointer;
+        border: 1px solid lightgray;
+        background-color: rgb(239, 239, 239);
+        transition: all .15s ease;
+      }
+      .submit-btn:hover {
+        background: lightgray;
+      }
+      .upload-shop:hover {
+        background: #FF9900;;
       }
     }
   }
