--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -27,6 +27,7 @@
         width: 300px;
         border-radius: 5px;
         border: 1px solid #ccc;
+        padding-left: 1px;
       }
     }
     .submit {
