--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -6,32 +6,39 @@
       お店を登録
     =form_with(model: @shop, local: true, url: owners_shops_path(@shop)) do |f|
       = render 'layouts/error_messages', model: f.object
-      .input.new-content
+      .input
         = f.label :name, '店名', class: "input__title"
         = f.text_field :name, class: "input__form"
-      .input.new-content
+      .input
         = f.label :postal_code, '郵便番号', class: "input__title"
         = f.text_field :postal_code, class: "input__form"
-      .input.new-content
+      .input
         = f.label :prefecture, '都道府県', class: "input__title"
         = f.select :prefecture, Shop.prefectures.keys, { include_blank: "選択してください", selected: 0 }, { class: "input__form"}
-      .input.new-content
+      .input
         = f.label :city, '市町村', class: "input__title"
         = f.text_field :city, class: "input__form"
-      .input.new-content
+      .input
         = f.label :house_number, '番地', class: "input__title"
         = f.text_field :house_number, class: "input__form"
-      .input.new-content
+      .input
         = f.label :building_name, '建物名', class: "input__title"
         = f.text_field :building_name, class: "input__form"
-      .input.new-content
+      .input
         = f.label :phone_number, '電話番号', class: "input__title"
         = f.text_field :phone_number, class: "input__form"
-      .input.new-content
-        = f.fields_for :images do |i|
-          = i.file_field :url
+      .input.image-upload
+        .input-title
+          ショップ画像
+        #image-box-1
+          .shop-num-0#image-box__container
+            = f.fields_for :images do |i|
+              .input-area
+                = i.file_field :url, type: 'file', name: "shop[images_attributes][][url]", value:"", style: "display:none", id:"img-file"
+                %label{for: "img-file"}
+                  %i.fas.fa-camera
 
-      .submit.new-content
+      .submit
         = f.submit "お店を公開する", class: "submit-btn upload-shop"
 
 = render 'layouts/footer'
