--- a/app/views/owners/shops/edit.html.haml
+++ b/app/views/owners/shops/edit.html.haml
@@ -27,9 +27,16 @@
       .new-content
         = f.label :phone_number, '電話番号', class: "new-content__title"
         = f.text_field :phone_number, class: "new-content__form"
-      .new-content
-        = f.fields_for :images do |i|
-          = i.file_field :url
+      .image-upload
+        .input-title
+          ショップ画像
+        #image-box-1.clearfix
+          .shop-num-0#image-box__container
+            = f.fields_for :images do |i|
+              .input-area
+                = i.file_field :url, type: 'file', name: "shop[images_attributes][][url]", value:"", style: "display:none", id:"img-file"
+                %label.upload-label{for: "img-file"}
+                  %i.fas.fa-camera
 
       .new-content
         = f.submit "更新", class: "submit-btn"
