--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -27,15 +27,15 @@
       .input
         = f.label :phone_number, '電話番号', class: "input__title"
         = f.text_field :phone_number, class: "input__form"
-      .input.image-upload
+      .image-upload
         .input-title
           ショップ画像
-        #image-box-1
+        #image-box-1.clearfix
           .shop-num-0#image-box__container
             = f.fields_for :images do |i|
               .input-area
                 = i.file_field :url, type: 'file', name: "shop[images_attributes][][url]", value:"", style: "display:none", id:"img-file"
-                %label{for: "img-file"}
+                %label.upload-label{for: "img-file"}
                   %i.fas.fa-camera
 
       .submit
