--- a/app/views/owners/shops/edit.html.haml
+++ b/app/views/owners/shops/edit.html.haml
@@ -4,29 +4,29 @@
   .form__container
     .form__container__title
       お店情報を編集
-    =form_with(model: @shop, local: true, url: owners_shop_path(@shop)) do |f|
+    =form_with(model: @shop, local: true, url: owners_shops_path(@shop)) do |f|
       = render 'layouts/error_messages', model: f.object
-      .new-content
-        = f.label :name, '店名', class: "new-content__title"
-        = f.text_field :name, class: "new-content__form"
-      .new-content
-        = f.label :postal_code, '郵便番号', class: "new-content__title"
-        = f.text_field :postal_code, class: "new-content__form"
-      .new-content
-        = f.label :prefecture, '都道府県', class: "new-content__title"
-        = f.select :prefecture, Shop.prefectures.keys, { include_blank: '選択してください'}, { class: "new-content__form"}
-      .new-content
-        = f.label :city, '市町村', class: "new-content__title"
-        = f.text_field :city, class: "new-content__form"
-      .new-content
-        = f.label :house_number, '番地', class: "new-content__title"
-        = f.text_field :house_number, class: "new-content__form"
-      .new-content
-        = f.label :building_name, '建物名', class: "new-content__title"
-        = f.text_field :building_name, class: "new-content__form"
-      .new-content
-        = f.label :phone_number, '電話番号', class: "new-content__title"
-        = f.text_field :phone_number, class: "new-content__form"
+      .input
+        = f.label :name, '店名', class: "input__title"
+        = f.text_field :name, class: "input__form"
+      .input
+        = f.label :postal_code, '郵便番号', class: "input__title"
+        = f.text_field :postal_code, class: "input__form"
+      .input
+        = f.label :prefecture, '都道府県', class: "input__title"
+        = f.select :prefecture, Shop.prefectures.keys, { include_blank: "選択してください", selected: 0 }, { class: "input__form"}
+      .input
+        = f.label :city, '市町村', class: "input__title"
+        = f.text_field :city, class: "input__form"
+      .input
+        = f.label :house_number, '番地', class: "input__title"
+        = f.text_field :house_number, class: "input__form"
+      .input
+        = f.label :building_name, '建物名', class: "input__title"
+        = f.text_field :building_name, class: "input__form"
+      .input
+        = f.label :phone_number, '電話番号', class: "input__title"
+        = f.text_field :phone_number, class: "input__form"
       .image-upload
         .input-title
           ショップ画像
@@ -38,7 +38,7 @@
                 %label.upload-label{for: "img-file"}
                   %i.fas.fa-camera
 
-      .new-content
-        = f.submit "更新", class: "submit-btn"
+      .submit
+        = f.submit "お店を公開する", class: "submit-btn upload-shop"
 
 = render 'layouts/footer'
