--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -34,7 +34,7 @@
           .shop-num-0#image-box__container
             = f.fields_for :images do |i|
               .input-area
-                = i.file_field :url, type: 'file', name: "shop[images_attributes][][url]", value:"", style: "display:none", id:"img-file"
+                = i.file_field :url, type: 'file', style: "display:none", id:"img-file"
                 %label.upload-label{for: "img-file"}
                   %i.fas.fa-camera
 
