Update index.html background url

--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -171,7 +171,7 @@ body {
 .app-banner {
   height: 400px;
   width: 100%;
-  background: url("/assets/images/ac96e11703b8fc1bd466f91bb87b3f6ed1524b09.jpg");
+  background-image: image-url("/assets/images/ac96e11703b8fc1bd466f91bb87b3f6ed1524b09.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
