--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -21,6 +21,8 @@
       line-height: 45px;
       display: flex ;
       justify-content: space-between;
+      &__title {
+      }
       &__form {
         width: 300px;
         border-radius: 5px;
@@ -54,7 +56,7 @@
           float: left; 
           .input-area {
             height: 150px;
-            .upload-label {
+            .upload-label { 
               height: 100%;
               width: 100%;
               min-width: 115px;
@@ -64,8 +66,7 @@
               cursor: pointer;
               text-align: center;
               line-height: 150px;
-            }
-            
+            } 
           }
         }
         .shop-num-0{
