--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -32,7 +32,7 @@
           ショップ画像
         #image-box-1.clearfix
           .shop-num-0#image-box__container
-            = f.fields_for :images do |i|
+            = f.fields_for :image do |i|
               .input-area
                 = i.file_field :url, type: 'file', style: "display:none", id:"img-file"
                 %label.upload-label{for: "img-file"}
