--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -32,9 +32,9 @@
           ショップ画像
         #image-box-1.clearfix
           .shop-num-0#image-box__container
-            = f.fields_for :image do |i|
+            = f.fields_for :images do |i|
               .input-area
-                = i.file_field :url, type: 'file', style: "display:none", id:"img-file"
+                = i.file_field :url, type: 'file', name: "shop[images_attributes][][url]", type: 'file', style: "display:none", id:"img-file"
                 %label.upload-label{for: "img-file"}
                   %i.fas.fa-camera
 
