--- a/app/views/owners/shops/show.html.haml
+++ b/app/views/owners/shops/show.html.haml
@@ -36,7 +36,14 @@
       .shop__container__comments__ttl
         Comments
       .shop__container__comments__txt-form
-        %form_with
+        - if current_user
+          = form_with(model: [@shop, @comment], local: true, id: "new_comment") do |form|
+            = form.text_area :text, placeholder: "コメントする", rows: "2", class: "textbox"
+            = form.submit "SEND", class: "form__submit"
+        - else
+          %strong
+            %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
+
 
 = render 'layouts/app-banner'
 
