--- a/app/views/shops/show.html.haml
+++ b/app/views/shops/show.html.haml
@@ -6,11 +6,14 @@
   .shop__container
     .main
       .main__image
-        - @shop.images.each do |image|
-          = image_tag image.url.url
+        = image_tag @shop.images[0].url.url, alt: "ショップ画像", height: '250px', width: '250px'
       .main__contents
         .main__contents__name
-          = @shop.name
+          - if owner_signed_in? && current_owner.id == @shop.owner_id
+            = @shop.name
+            = link_to "編集", edit_owners_shop_path(@shop), class: "main__contents__name__edit-btn"
+          - else
+            = @shop.name
         .main__contents__info
           .main__contents__info__address
             = "#{@shop.city}#{@shop.house_number} #{@shop.building_name}"
@@ -32,3 +35,16 @@
     .shop__container__comments
       .shop__container__comments__ttl
         Comments
+      .shop__container__comments__txt-form
+        - if current_user
+          = form_with(model: [@shop, @comment], local: true, id: "new_comment") do |form|
+            = form.text_area :text, placeholder: "コメントする", rows: "2", class: "textbox"
+            = form.submit "SEND", class: "form__submit"
+        - else
+          %strong
+            %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
+
+
+= render 'layouts/app-banner'
+
+= render 'layouts/footer'
