--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -331,8 +331,8 @@ body {
         }
       }
     }
-    &__comments {
-      height: 100px;
+    &__comment {
+      height: auto;
       padding: 10px;
       &__ttl {
         font-family: arial unicode ms;
