Update routing & index.html

--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -58,7 +58,7 @@
                     - shop.comments.last(1).each do |comment|
                       .comment__user
                         = comment.user.nickname
-                        の口コミ
+                        さんの口コミ
                       .comment__text
                         = comment.text
 = render 'layouts/app-banner'
