--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -33,14 +33,10 @@
           %li.shop-container__lists.shop
             .shop__image
               .shop__image__main
-                main image
+                = image_tag shop.images[0].url.url, alt: "ショップ画像", height: '160px', width: '160px'
               %ul.shop__image__sub
-                %li.shop__image__sub__small
-                  sub image
-                %li.shop__image__sub__small
-                  sub image
-                %li.shop__image__sub__small
-                  sub image
+                - shop.images.first(3).each do |image|
+                  %li= image_tag image.url.url, alt: '', height: '50px', width: '50px', class: 'shop__image__sub__small'
             .shop__info
               .shop__info__ttl
                 .shop__info__ttl__inner
