--- a/app/views/shops/show.html.haml
+++ b/app/views/shops/show.html.haml
@@ -43,7 +43,7 @@
               = form.submit "SEND", class: "form__submit"
           - else
             %strong
-              %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
+              %p ※※※ コメントの投稿には一般ユーザーとして新規登録/ログインが必要です ※※※
       .shop__container__comment__comments
         .comments-ttl
           コメント一覧
