--- a/app/views/owners/shops/show.html.haml
+++ b/app/views/owners/shops/show.html.haml
@@ -41,9 +41,17 @@
             = form.text_area :text, placeholder: "コメントする", rows: "2", class: "textbox"
             = form.submit "SEND", class: "form__submit"
         - else
-          %strong
-            %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
-
+            %strong
+              %p ※※※ コメントの投稿には一般ユーザーとして新規登録/ログインが必要です ※※※
+      .shop__container__comment__comments
+        .comments-ttl
+          コメント一覧
+        .comments-list
+          - if @comments
+            - @comments.each do |comment|
+              .comment
+                .comment__user= "#{comment.user.nickname}さん"
+                .comment__text= safe_join(comment.text.split("\n"),tag(:br))
 
 = render 'layouts/app-banner'
 
