--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "font-awesome";
 @import "base/reset";
 @import "shops";
+@import "users";
 @import "modules/header";
 @import "modules/footer";
 @import "modules/form";
