--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -40,18 +40,19 @@
         }
       }
     }
-    &__edit-btn {
-      width: 100px;
-      margin: 70px auto;
+    &__edit {
       font-weight: bold;
+      margin: 70px auto;
       font-size: 20px;
-      border: 1px solid lightgray;
-      border-radius: 10px;
-      padding: 5px;
-      cursor: pointer;
+      &__btn {
+        border: 1px solid lightgray;
+        border-radius: 10px;
+        padding: 10px 20px;
+        cursor: pointer;
+      }
       a {
-        color: rgba(12, 18, 28, 0.6);
-        text-decoration: none;
+      color: rgba(12, 18, 28, 0.6);
+      text-decoration: none;
       }
     }
   }
