--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,36 +1,39 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "users/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "new-passwohrd"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "current-password"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+- provide(:title, "編集画面:#{@user.nickname}")
+
+= render 'layouts/header'
+
+.form
+  .form__container
+    .form__container__title
+      ユーザー情報編集
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = render "users/shared/error_messages", resource: resource
+      .input.new-content
+        = f.label :email, 'メールアドレス', class: "new-content__title"
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: "input__form"
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %div
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .input.new-content
+        = f.label :password, 'パスワード', class: "new-content__title"
+        - if @minimum_password_length
+          %em
+          (#{@minimum_password_length}文字以上)
+        = f.password_field :password, autocomplete: "new-passwohrd", class: "input__form"
+      %i (変更しない場合は空欄のままにしてください。)
+      .input.new-content
+        = f.label :password_confirmation, 'パスワードの確認', class: "new-content__title"
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: "input__form"
+      .input.new-content
+        = f.label :current_password, '現在のパスワード', class: "new-content__title"
+        = f.password_field :current_password, autocomplete: "current-password", class: "input__form"
+      %i (変更内容を確認するために現在のパスワードが必要です。)
+      .new-content.submit
+        = f.submit "更新", class: "submit-btn"
+      .new-content.submit
+        %h3 アカウントを削除する
+        %p
+          #{button_to "アカウントを削除", user_registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "submit-btn"}
+      = link_to "Back", :back
+
+= render 'layouts/footer'
