Mark up owner page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "base/reset";
 @import "shops";
 @import "users";
+@import "owners";
 @import "modules/header";
 @import "modules/footer";
 @import "modules/form";
