--- a/app/views/owners/shops/index.html.haml
+++ b/app/views/owners/shops/index.html.haml
@@ -20,45 +20,9 @@
         休憩･勉強･仕事･女子会
         %br
         最高のひとときを
-  .main__feature
-    - if @tags.present?
-      - @tags.each do |tag|
-        = link_to "#{tag.name}(#{tag.taggings_count})", tags_path(tag.name)
-    - else
-      %p 登録されているタグはありません
-  .main__shop-list
-    .shop-container
-      .shop-container__title
-        %h2 Cafe一覧
-      %ul.shop-container__lists
-        - @shops.each do |shop|
-          %li.shop-container__lists.shop
-            .shop__image
-              .shop__image__main
-                = image_tag shop.images[0].url.url, alt: "ショップ画像", height: '160px', width: '160px'
-              %ul.shop__image__sub
-                - shop.images.first(3).each do |image|
-                  %li= image_tag image.url.url, alt: '', height: '50px', width: '50px', class: 'shop__image__sub__small'
-            .shop__info
-              .shop__info__ttl
-                .shop__info__ttl__inner
-                  = link_to shop_path(shop) do
-                    .name= "#{shop.name}"
-                  .address= "#{shop.prefecture}#{shop.city}"
-              .shop__info__tags
-                %ul.tags
-                  %li= "#女子会"
-                  %li= "#女子会"
-                  %li= "#女子会"
-              .shop__info__comments
-                %ul.comments
-                  %li.comment
-                    - shop.comments.last(1).each do |comment|
-                      .comment__user
-                        = comment.user.nickname
-                        さんの口コミ
-                      .comment__text
-                        = comment.text
+  .main__contents
+    = render 'layouts/left-nav'
+    = render 'layouts/shop-list'
 
 = render 'layouts/app-banner'
 
