--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -262,7 +262,7 @@ body {
 
 // shops/showページ
 
-.shop {
+.shop-info {
   width: 920px;
   margin: 20px auto;
   &__container {
@@ -275,7 +275,7 @@ body {
     background: #fff;
     margin: 0 0 15px 0;
     padding: 10px;
-    .main {
+    &__main {
       display: flex;
       justify-content: space-between;
       display: flex;
@@ -300,7 +300,7 @@ body {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          &__edit-btn {
+          .shop-edit-btn {
             height: 35px;
             width: 70px;
             font-size: 20px;
@@ -368,7 +368,7 @@ body {
         }
       }
     }
-    &__comment {
+    &__comment-content {
       height: auto;
       width: 100%;
       padding: 10px;
