Edit UI for shops/new tag form

--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -29,7 +29,7 @@
         = f.text_field :phone_number, class: "input__form"
       .input
         = f.label :tag_list, 'タグ', class: "input__title"
-        = f.text_field :tag_list, value: @shop.tag_list.join(','), class: "input__form"
+        = f.text_field :tag_list, value: @shop.tag_list.join(','), class: "input__form tag_form"
 
       .image-upload
         .input-title
