--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,5 +1,8 @@
 .footer {
-  height: 450px;
+  height: 200px;
   width: 100%;
-  background-color: black
+  text-align: center;
+  &__text {
+    line-height: 200px;
+  }
 }
