--- a/app/views/owners/shops/index.html.haml
+++ b/app/views/owners/shops/index.html.haml
@@ -2,11 +2,11 @@
 
 = render 'layouts/header'
 
-.search
-  %form.search__container{:action => "#", :method => "get"}
-    %input{:placeholder => "キーワード検索", :size => "25", :type => "text"}
-    %button{:type => "submit"}
-      %i.fas.fa-search
+-# .search
+-#   %form.search__container{:action => "#", :method => "get"}
+-#     %input{:placeholder => "キーワード検索", :size => "25", :type => "text"}
+-#     %button{:type => "submit"}
+-#       %i.fas.fa-search
 
 .main
   .main__img
