--- a/app/views/shops/show.html.haml
+++ b/app/views/shops/show.html.haml
@@ -23,16 +23,16 @@
           - @shop.tags.each do |tag|
             = "##{tag.name}"
 
-  .shop-info__container
-    .shop-info__container__contents
-      .shop-info__container__contents__map
-        .shop-info__container__contents__map__ttl
-          Cafe Map
-        .shop-info__container__contents__map__field
-      .shop-info__container__contents__images
-        .shop-info__container__contents__images__ttl
-          Cafe Photos
-        .shop-info__container__contents__images__field
+  -# .shop-info__container
+  -#   .shop-info__container__contents
+  -#     .shop-info__container__contents__map
+  -#       .shop-info__container__contents__map__ttl
+  -#         Cafe Map
+  -#       .shop-info__container__contents__map__field
+  -#     .shop-info__container__contents__images
+  -#       .shop-info__container__contents__images__ttl
+  -#         Cafe Photos
+  -#       .shop-info__container__contents__images__field
 
   .shop-info__container
     .shop-info__container__comment-content
